--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,17 @@ cmake_minimum_required(VERSION 2.6)
 
 SET(CMAKE_CXX_FLAGS "-std=gnu++11")
 
-set(SOURCES main.cpp)
+set(HEADERS
+	src/Command.hpp
+	src/CommandFactory.hpp
+	src/Coordinates.hpp
+	src/Game.hpp
+	src/Player.hpp
+	src/Checkpoint.hpp
+)	
 
-add_executable(hackaton ${SOURCES})
+set(SOURCES
+	src/main.cpp
+)
+
+add_executable(hackaton ${SOURCES} ${HEADERS})
