--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,11 +4,13 @@ SET(CMAKE_CXX_FLAGS "-std=gnu++11")
 
 set(HEADERS
 	src/Command.hpp
-	src/CommandFactory.hpp
 	src/Coordinates.hpp
 	src/Game.hpp
 	src/Player.hpp
 	src/Checkpoint.hpp
+	src/IO.hpp
+	src/Params.hpp
+	src/Logic.hpp
 )	
 
 set(SOURCES
